; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_sysevent.c_sysevent_detach_attributes.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_sysevent.c_sysevent_detach_attributes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysevent = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sysevent_detach_attributes(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.sysevent*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.sysevent*
  store %struct.sysevent* %5, %struct.sysevent** %3, align 8
  %6 = load %struct.sysevent*, %struct.sysevent** %3, align 8
  %7 = getelementptr inbounds %struct.sysevent, %struct.sysevent* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load %struct.sysevent*, %struct.sysevent** %3, align 8
  %13 = getelementptr inbounds %struct.sysevent, %struct.sysevent* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  ret void
}

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
